fixed entry wrapping

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 h1 {
-	font-size: xx-large;
+	font-size: 24;
 	text-align: center;
 	color: rgb(0, 67, 255);
 	color: red;
@@ -47,14 +47,11 @@ p {
 	color: yellow;
 	flex: 1;
 }
-.container {
-	display: flex;
-}
 
 footer {
 	color: grey;
 	font-size: small;
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	width: 100%;
 	height: 2.5rem;
